[gd_scene load_steps=11 format=3 uid="uid://cwewltljruq1e"]

[ext_resource type="Script" uid="uid://cv6sr2mw1bm5b" path="res://scripts/main2.gd" id="1_dhog5"]
[ext_resource type="Texture2D" uid="uid://bu44bvwnwtgoy" path="res://noisetexture.jpg" id="1_ydn3f"]
[ext_resource type="PackedScene" uid="uid://c18jciqa1gegr" path="res://scenes/horizontal_wall.tscn" id="2_v35dl"]
[ext_resource type="PackedScene" uid="uid://duaqti2flo1hh" path="res://scenes/vertical_wall.tscn" id="3_ypmmn"]
[ext_resource type="PackedScene" uid="uid://3oarmx4m5xeo" path="res://scenes/inner_wall.tscn" id="4_jbiud"]
[ext_resource type="PackedScene" uid="uid://jkkt2a4pbk60" path="res://scenes/cover_wall.tscn" id="5_17yxb"]
[ext_resource type="PackedScene" uid="uid://ccg6mgmu2veqo" path="res://scenes/control_ui.tscn" id="7_24haq"]
[ext_resource type="PackedScene" uid="uid://bgt6w34wmv1ow" path="res://scenes/AnimatedPlayer.tscn" id="7_iunv5"]
[ext_resource type="PackedScene" uid="uid://b0brltiubnxwm" path="res://scenes/HTTPNODE.tscn" id="9_vew7o"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_85g3d"]
vertices = PackedVector2Array(353.297, 317, 345.313, 50.2578, 524.141, 54.75, 528.156, 312.602, 1133.14, 604.93, 726.5, 602.07, 729.523, 541, 994, 541, 1135.85, 413.813, 994, 472.883, 870.641, 408.75, 738.922, 475.883, 877.031, 387.406, 737.906, 347.961, 884.25, 118.609, 1134.93, 53.1797, 1133.06, 335.727, 956.68, 331.242, 949.656, 114.352, 596.117, 62.8203, 599.117, 308.422, 657.891, 355.961, 31, 601.93, 31, 55.1094, 272.039, 57.8828, 272.992, 291.938, 267.633, 317, 660.867, 598.063)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 4, 7, 9), PackedInt32Array(10, 8, 9, 11), PackedInt32Array(12, 10, 11, 13, 14), PackedInt32Array(15, 16, 17, 18), PackedInt32Array(19, 15, 18, 14), PackedInt32Array(20, 19, 14, 13, 21), PackedInt32Array(22, 23, 24, 25, 26), PackedInt32Array(27, 22, 26, 0), PackedInt32Array(27, 0, 3, 21), PackedInt32Array(21, 3, 20)])
outlines = Array[PackedVector2Array]([PackedVector2Array(21, 45, 282, 48, 283, 293, 280, 307, 343, 307, 335, 40, 534, 45, 538, 302, 589, 299, 586, 53, 1145, 43, 1143, 346, 947, 341, 940, 125, 894, 128, 887, 389, 884, 399, 1146, 404, 1143, 615, 716, 612, 720, 531, 984, 531, 984, 483, 729, 486, 728, 359, 668, 365, 671, 608, 21, 612)])

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_dhog5")
metadata/_edit_vertical_guides_ = [187.0, 1152.0, 1146.0]
metadata/_edit_horizontal_guides_ = [-24.0, 620.0, 472.0]

[node name="Floor" type="Sprite2D" parent="."]
self_modulate = Color(0.197937, 0.197937, 0.197937, 1)
texture = ExtResource("1_ydn3f")

[node name="Walls" type="Node2D" parent="Floor" groups=["Walls"]]

[node name="HorizontalWall" parent="Floor/Walls" instance=ExtResource("2_v35dl")]

[node name="HorizontalWall2" parent="Floor/Walls" instance=ExtResource("2_v35dl")]
position = Vector2(6, 628)

[node name="VerticalWall" parent="Floor/Walls" instance=ExtResource("3_ypmmn")]

[node name="VerticalWall2" parent="Floor/Walls" instance=ExtResource("3_ypmmn")]
position = Vector2(1158, 10)

[node name="InnerWall" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(330, 40)
rotation = 1.5708

[node name="InnerWall2" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(584, 40)
rotation = 1.5708

[node name="InnerWall3" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(896, 355)

[node name="InnerWall4" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(936, 127)
rotation = 1.5708

[node name="InnerWall5" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(714, 489)

[node name="InnerWall6" parent="Floor/Walls" instance=ExtResource("4_jbiud")]
position = Vector2(716, 366)
rotation = 1.5708

[node name="CoverWall" parent="Floor/Walls" instance=ExtResource("5_17yxb")]
position = Vector2(150, 400)
rotation = -0.785398

[node name="CoverWall2" parent="Floor/Walls" instance=ExtResource("5_17yxb")]
position = Vector2(350, 450)
rotation = 0.785398

[node name="CharacterBody2D" parent="Floor" instance=ExtResource("7_iunv5")]
position = Vector2(158, 134)
scale = Vector2(0.35, 0.35)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Floor"]
visible = false
navigation_polygon = SubResource("NavigationPolygon_85g3d")

[node name="SpawnZone" type="Area2D" parent="Floor"]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Floor/SpawnZone"]
polygon = PackedVector2Array(19, 46, 282, 47, 283, 306, 333, 306, 335, 57, 535, 52, 536, 305, 601, 300, 591, 45, 1140, 50, 1139, 350, 941, 351, 941, 131, 890, 123, 893, 401, 1144, 393, 1142, 618, 722, 618, 720, 531, 989, 532, 989, 479, 725, 477, 722, 347, 670, 350, 669, 622, 25, 617)

[node name="GameOver" parent="." instance=ExtResource("7_24haq")]
script = null

[node name="GameOverLabel" type="Label" parent="GameOver"]
offset_left = 74.0
offset_top = 217.0
offset_right = 157.0
offset_bottom = 240.0
text = "GameOver
"

[node name="RestartButton" type="Button" parent="GameOver/GameOverLabel"]
process_mode = 3
layout_mode = 0
offset_left = 99.0
offset_top = -2.0
offset_right = 221.0
offset_bottom = 29.0
text = "Restart Button"

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="GameOverCamera" type="Camera2D" parent="."]
visible = false

[node name="HTTP" parent="." instance=ExtResource("9_vew7o")]

[node name="PowerUpTimer" type="Timer" parent="."]

[connection signal="pressed" from="GameOver/GameOverLabel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
